# NeuralNet

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/float/: float16.h
lib/it/: itlib.h  ittypes.h
lib/it/itvector/: vector.cpp  vector.h
old/: neural_net.h
src/: CMakeLists.txt  Synapse.cpp  activation_functions.h  activation_functions.hpp  connected_layer.hpp  cost_functions.h  cost_functions.hpp  layer.cpp  layer.h  layer.hpp  main.cpp  neuralnet.h  neuralnet.hpp  neuron.cpp  neuron.h  neuron.hpp  synapse.hpp  util.h
